// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer dark theme Link Nodes returns a Text Link node 1`] = `
<Text
  accessibilityHint="Opens in a new window"
  accessibilityRole="link"
  onPress={[Function]}
  style={
    {
      "color": "#58a6ff",
      "fontSize": 16,
      "fontStyle": "italic",
      "lineHeight": 24,
    }
  }
>
  Link
</Text>
`;

exports[`Renderer dark theme Text Nodes returns a Text node 1`] = `
<Text
  style={
    {
      "fontSize": 24,
    }
  }
>
  Hello world
</Text>
`;

exports[`Renderer dark theme Text Nodes returns a wrapped Text node 1`] = `
<Text
  style={
    {
      "fontSize": 24,
    }
  }
>
  <Text
    style={{}}
  >
    Hello world
  </Text>
</Text>
`;

exports[`Renderer dark theme Text Nodes returns a wrapped Text node with styles 1`] = `
<Text
  style={
    {
      "fontSize": 24,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 24,
      }
    }
  >
    Hello world
  </Text>
</Text>
`;

exports[`Renderer dark theme View Nodes returns a hr View node 1`] = `
<View
  style={
    {
      "borderBottomColor": "#30363d",
      "borderBottomWidth": 1,
      "marginVertical": 4,
    }
  }
/>
`;

exports[`Renderer dark theme View Nodes returns a paragraph View node 1`] = `
<View
  style={
    {
      "color": "#ffffff",
      "fontSize": 16,
      "lineHeight": 24,
      "paddingVertical": 8,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 24,
      }
    }
  >
    Hello world
  </Text>
  <Text
    accessibilityHint="Opens in a new window"
    accessibilityRole="link"
    onPress={[Function]}
    style={
      {
        "color": "#58a6ff",
        "fontSize": 16,
        "fontStyle": "italic",
        "lineHeight": 24,
      }
    }
  >
    Link
  </Text>
</View>
`;

exports[`Renderer dark theme getBlockquoteNode returns a Blockquote 1`] = `
<View
  style={
    {
      "borderLeftColor": "#30363d",
      "borderLeftWidth": 4,
      "opacity": 0.8,
      "paddingLeft": 16,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 24,
      }
    }
  >
    Hello world
  </Text>
  <Text
    accessibilityHint="Opens in a new window"
    accessibilityRole="link"
    onPress={[Function]}
    style={
      {
        "color": "#58a6ff",
        "fontSize": 16,
        "fontStyle": "italic",
        "lineHeight": 24,
      }
    }
  >
    Link
  </Text>
</View>
`;

exports[`Renderer dark theme getCodeBlockNode returns a Code block (horizontal ScrollView) 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "backgroundColor": "#161b22",
      "minWidth": "100%",
      "padding": 16,
    }
  }
  horizontal={true}
>
  <View>
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 16,
          "fontStyle": "italic",
          "lineHeight": 24,
        }
      }
    >
      print('hello')
    </Text>
  </View>
</RCTScrollView>
`;

exports[`Renderer dark theme getImageLinkNode returns a Image Link node 1`] = `
<View
  accessibilityHint="Opens in a new window"
  accessibilityRole="link"
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      [
        undefined,
        {},
        {
          "height": 0,
        },
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      accessibilityLabel="Hello world"
      accessibilityRole="image"
      onError={[Function]}
      onLayout={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      resizeMode="cover"
      source={
        {
          "uri": "https://dummyimage.com/100x100/fff/aaa",
        }
      }
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "height": 0,
            "width": undefined,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Renderer dark theme getImageNode returns a Image 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    [
      undefined,
      {},
      {
        "height": 0,
      },
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <Image
    accessibilityLabel="Hello world"
    accessibilityRole="image"
    onError={[Function]}
    onLayout={[Function]}
    onLoad={[Function]}
    onLoadStart={[Function]}
    resizeMode="cover"
    source={
      {
        "uri": "https://picsum.photos/100/100",
      }
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "height": 0,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Renderer dark theme getListNode returns Ordered List 1`] = `
[
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
        },
        undefined,
      ]
    }
    testID="marked-list-item"
  >
    <View
      style={
        {
          "padding": 24,
        }
      }
    >
      <Text
        style={
          [
            {
              "alignSelf": "flex-end",
              "color": "#ffffff",
              "flexGrow": 0,
              "flexShrink": 1,
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "right",
            },
            {
              "width": 28.799999999999997,
            },
          ]
        }
        testID="marker-box"
      >
        1. 
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#ffffff",
          "flexShrink": 1,
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      Hello world 1
    </Text>
  </View>,
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
        },
        undefined,
      ]
    }
    testID="marked-list-item"
  >
    <View
      style={
        {
          "padding": 24,
        }
      }
    >
      <Text
        style={
          [
            {
              "alignSelf": "flex-end",
              "color": "#ffffff",
              "flexGrow": 0,
              "flexShrink": 1,
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "right",
            },
            {
              "width": 28.799999999999997,
            },
          ]
        }
        testID="marker-box"
      >
        2. 
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#ffffff",
          "flexShrink": 1,
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      Hello world 2
    </Text>
  </View>,
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
        },
        undefined,
      ]
    }
    testID="marked-list-item"
  >
    <View
      style={
        {
          "padding": 24,
        }
      }
    >
      <Text
        style={
          [
            {
              "alignSelf": "flex-end",
              "color": "#ffffff",
              "flexGrow": 0,
              "flexShrink": 1,
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "right",
            },
            {
              "width": 28.799999999999997,
            },
          ]
        }
        testID="marker-box"
      >
        3. 
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#ffffff",
          "flexShrink": 1,
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      Hello world 3
    </Text>
  </View>,
]
`;

exports[`Renderer dark theme getListNode returns Un-Ordered List 1`] = `
[
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
        },
        undefined,
      ]
    }
    testID="marked-list-item"
  >
    <View
      style={
        {
          "padding": 24,
        }
      }
    >
      <Text
        style={
          [
            {
              "alignSelf": "flex-end",
              "color": "#ffffff",
              "flexGrow": 0,
              "flexShrink": 1,
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "right",
            },
            {
              "width": 19.2,
            },
          ]
        }
        testID="marker-box"
      >
        • 
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#ffffff",
          "flexShrink": 1,
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      Hello world 1
    </Text>
  </View>,
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
        },
        undefined,
      ]
    }
    testID="marked-list-item"
  >
    <View
      style={
        {
          "padding": 24,
        }
      }
    >
      <Text
        style={
          [
            {
              "alignSelf": "flex-end",
              "color": "#ffffff",
              "flexGrow": 0,
              "flexShrink": 1,
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "right",
            },
            {
              "width": 19.2,
            },
          ]
        }
        testID="marker-box"
      >
        • 
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#ffffff",
          "flexShrink": 1,
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      Hello world 2
    </Text>
  </View>,
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
        },
        undefined,
      ]
    }
    testID="marked-list-item"
  >
    <View
      style={
        {
          "padding": 24,
        }
      }
    >
      <Text
        style={
          [
            {
              "alignSelf": "flex-end",
              "color": "#ffffff",
              "flexGrow": 0,
              "flexShrink": 1,
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "right",
            },
            {
              "width": 19.2,
            },
          ]
        }
        testID="marker-box"
      >
        • 
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#ffffff",
          "flexShrink": 1,
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      Hello world 3
    </Text>
  </View>,
]
`;

exports[`Renderer light theme Link Nodes returns a Text Link node 1`] = `
<Text
  accessibilityHint="Opens in a new window"
  accessibilityRole="link"
  onPress={[Function]}
  style={
    {
      "color": "#58a6ff",
      "fontSize": 16,
      "fontStyle": "italic",
      "lineHeight": 24,
    }
  }
>
  Link
</Text>
`;

exports[`Renderer light theme Text Nodes returns a Text node 1`] = `
<Text
  style={
    {
      "fontSize": 24,
    }
  }
>
  Hello world
</Text>
`;

exports[`Renderer light theme Text Nodes returns a wrapped Text node 1`] = `
<Text
  style={
    {
      "fontSize": 24,
    }
  }
>
  <Text
    style={{}}
  >
    Hello world
  </Text>
</Text>
`;

exports[`Renderer light theme Text Nodes returns a wrapped Text node with styles 1`] = `
<Text
  style={
    {
      "fontSize": 24,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 24,
      }
    }
  >
    Hello world
  </Text>
</Text>
`;

exports[`Renderer light theme View Nodes returns a hr View node 1`] = `
<View
  style={
    {
      "borderBottomColor": "#d0d7de",
      "borderBottomWidth": 1,
      "marginVertical": 4,
    }
  }
/>
`;

exports[`Renderer light theme View Nodes returns a paragraph View node 1`] = `
<View
  style={
    {
      "color": "#333333",
      "fontSize": 16,
      "lineHeight": 24,
      "paddingVertical": 8,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 24,
      }
    }
  >
    Hello world
  </Text>
  <Text
    accessibilityHint="Opens in a new window"
    accessibilityRole="link"
    onPress={[Function]}
    style={
      {
        "color": "#58a6ff",
        "fontSize": 16,
        "fontStyle": "italic",
        "lineHeight": 24,
      }
    }
  >
    Link
  </Text>
</View>
`;

exports[`Renderer light theme getBlockquoteNode returns a Blockquote 1`] = `
<View
  style={
    {
      "borderLeftColor": "#d0d7de",
      "borderLeftWidth": 4,
      "opacity": 0.8,
      "paddingLeft": 16,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 24,
      }
    }
  >
    Hello world
  </Text>
  <Text
    accessibilityHint="Opens in a new window"
    accessibilityRole="link"
    onPress={[Function]}
    style={
      {
        "color": "#58a6ff",
        "fontSize": 16,
        "fontStyle": "italic",
        "lineHeight": 24,
      }
    }
  >
    Link
  </Text>
</View>
`;

exports[`Renderer light theme getCodeBlockNode returns a Code block (horizontal ScrollView) 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "backgroundColor": "#f6f8fa",
      "minWidth": "100%",
      "padding": 16,
    }
  }
  horizontal={true}
>
  <View>
    <Text
      style={
        {
          "color": "#333333",
          "fontSize": 16,
          "fontStyle": "italic",
          "lineHeight": 24,
        }
      }
    >
      print('hello')
    </Text>
  </View>
</RCTScrollView>
`;

exports[`Renderer light theme getImageLinkNode returns a Image Link node 1`] = `
<View
  accessibilityHint="Opens in a new window"
  accessibilityRole="link"
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      [
        undefined,
        {},
        {
          "height": 0,
        },
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      accessibilityLabel="Hello world"
      accessibilityRole="image"
      onError={[Function]}
      onLayout={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      resizeMode="cover"
      source={
        {
          "uri": "https://dummyimage.com/100x100/fff/aaa",
        }
      }
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "height": 0,
            "width": undefined,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Renderer light theme getImageNode returns a Image 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    [
      undefined,
      {},
      {
        "height": 0,
      },
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <Image
    accessibilityLabel="Hello world"
    accessibilityRole="image"
    onError={[Function]}
    onLayout={[Function]}
    onLoad={[Function]}
    onLoadStart={[Function]}
    resizeMode="cover"
    source={
      {
        "uri": "https://picsum.photos/100/100",
      }
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "height": 0,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Renderer light theme getListNode returns Ordered List 1`] = `
[
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
        },
        undefined,
      ]
    }
    testID="marked-list-item"
  >
    <View
      style={
        {
          "padding": 24,
        }
      }
    >
      <Text
        style={
          [
            {
              "alignSelf": "flex-end",
              "color": "#333333",
              "flexGrow": 0,
              "flexShrink": 1,
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "right",
            },
            {
              "width": 28.799999999999997,
            },
          ]
        }
        testID="marker-box"
      >
        1. 
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#333333",
          "flexShrink": 1,
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      Hello world 1
    </Text>
  </View>,
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
        },
        undefined,
      ]
    }
    testID="marked-list-item"
  >
    <View
      style={
        {
          "padding": 24,
        }
      }
    >
      <Text
        style={
          [
            {
              "alignSelf": "flex-end",
              "color": "#333333",
              "flexGrow": 0,
              "flexShrink": 1,
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "right",
            },
            {
              "width": 28.799999999999997,
            },
          ]
        }
        testID="marker-box"
      >
        2. 
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#333333",
          "flexShrink": 1,
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      Hello world 2
    </Text>
  </View>,
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
        },
        undefined,
      ]
    }
    testID="marked-list-item"
  >
    <View
      style={
        {
          "padding": 24,
        }
      }
    >
      <Text
        style={
          [
            {
              "alignSelf": "flex-end",
              "color": "#333333",
              "flexGrow": 0,
              "flexShrink": 1,
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "right",
            },
            {
              "width": 28.799999999999997,
            },
          ]
        }
        testID="marker-box"
      >
        3. 
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#333333",
          "flexShrink": 1,
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      Hello world 3
    </Text>
  </View>,
]
`;

exports[`Renderer light theme getListNode returns Un-Ordered List 1`] = `
[
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
        },
        undefined,
      ]
    }
    testID="marked-list-item"
  >
    <View
      style={
        {
          "padding": 24,
        }
      }
    >
      <Text
        style={
          [
            {
              "alignSelf": "flex-end",
              "color": "#333333",
              "flexGrow": 0,
              "flexShrink": 1,
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "right",
            },
            {
              "width": 19.2,
            },
          ]
        }
        testID="marker-box"
      >
        • 
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#333333",
          "flexShrink": 1,
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      Hello world 1
    </Text>
  </View>,
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
        },
        undefined,
      ]
    }
    testID="marked-list-item"
  >
    <View
      style={
        {
          "padding": 24,
        }
      }
    >
      <Text
        style={
          [
            {
              "alignSelf": "flex-end",
              "color": "#333333",
              "flexGrow": 0,
              "flexShrink": 1,
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "right",
            },
            {
              "width": 19.2,
            },
          ]
        }
        testID="marker-box"
      >
        • 
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#333333",
          "flexShrink": 1,
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      Hello world 2
    </Text>
  </View>,
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
        },
        undefined,
      ]
    }
    testID="marked-list-item"
  >
    <View
      style={
        {
          "padding": 24,
        }
      }
    >
      <Text
        style={
          [
            {
              "alignSelf": "flex-end",
              "color": "#333333",
              "flexGrow": 0,
              "flexShrink": 1,
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "right",
            },
            {
              "width": 19.2,
            },
          ]
        }
        testID="marker-box"
      >
        • 
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#333333",
          "flexShrink": 1,
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      Hello world 3
    </Text>
  </View>,
]
`;
